2014-08-15  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	* src/we/waveformeditor.h:
	Only set sensitive to false on child.

2014-08-15  kitone  <kitone@gna.org>

	* configure.ac:
	Fix gstreamer level test on old version.

2014-08-14	kitone	<kitone@gna.org>

	*  plugins/actions/keyframesmanagement/keyframesmanagement.cc
	Fix bug #22472 : Recent keyfroms files.

2014-08-12	kitone	<kitone@gna.org>

	*  plugins/actions/keyframesmanagement/keyframesgeneratorusingframe.cc
	Port the keyframes generator using frame to gstreamer 1.0.

2014-08-12	kitone	<kitone@gna.org>

	*  plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui
	*  plugins/actions/externalvideoplayer/externalvideoplayer.cc
	Fix bug #20557 : When working with subtitleeditor project, external player does not load it

2014-08-12	kitone	<kitone@gna.org>

	*  src/vp/gstplayer.cc
	Fix bug #22406 : Bugs with GTk3 port (Generating waveform does not work).
	Use property current_uri instead of uri.

2014-08-12	kitone	<kitone@gna.org>

	*  src/vp/gstplayer.cc
	Fix bug #22406 : Bugs with GTk3 port (seeking by single frame).
	Port the get_framerate method to gstreamer 1.0.

2014-05-04	kitone	<kitone@gna.org>

	*  plugins/actions/splitdocument/splitdocument.cc
	Fix bug #22009 : Split subtitle file.

2014-03-01	kitone	<kitone@gna.org>

	* src/document.h
	* src/subtitles.cc
	* plugins/actions/findandreplace/findandreplace.cc
	Add document signal 'subtitle-deleted'.
	Fix segfault when we delete subtitle using find and replace (Original patch by Pete Beardmore)

2014-03-01	kitone	<kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc
	Extend regex remplacement using submatches. Patch by Pete Beardmore.

2014-03-01	kitone	<kitone@gna.org>

	* plugins/actions/findandreplace/dialog-find-and-replace.ui
	Re-enable focus on entries. Patch by Pete Beardmore.

2014-03-01	kitone	<kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc
	* src/document.h